# platform.packages.modules.ConfigInfrastructure

./: OWNERS  TEST_MAPPING
aconfigd/: Android.bp  Cargo.toml  TEST_MAPPING
aconfigd/proto/: Android.bp  Cargo.toml  aconfigd.proto  repackage-aconfigd-proto-stream.txt
aconfigd/proto/src/: lib.rs
aconfigd/src/: aconfigd.cpp  aconfigd.h  aconfigd.rs  aconfigd_commands.rs  aconfigd_main.cpp  lib.rs  main.rs  storage_files.rs  storage_files_manager.rs  test_utils.rs  util.rs  utils.rs
aflags/: Android.bp  Cargo.toml
aflags/src/: aconfig_storage_source.rs  device_config_source.rs  main.rs
apex/: Android.bp  configinfrastructure.rc  manifest.json
framework/: Android.bp  flags.aconfig  framework-configinfrastructure-ravenwood-policies.txt  jarjar-rules.txt
framework/api/: current.txt  module-lib-current.txt  system-current.txt
framework/java/android/configinfrastructure/aconfig/: AconfigPackage.java  AconfigPackageLocal.java  AconfigStorageReadException.java
framework/java/android/os/flagging/: AconfigPackage.java  AconfigPackageInternal.java  AconfigStorageWriteException.java  AconfigWriteException.java  (+2 more)
framework/java/android/provider/: DeviceConfig.java  OWNERS  StageOtaFlags.java  WritableFlags.java  WritableNamespaces.java
framework/tests/: Android.bp  AndroidCtsTest.xml  AndroidManifest.xml  AndroidTest.xml  AndroidUnitTest.xml
framework/tests/src/: AconfigPackageInternalTests.java  AconfigPackageLocalTests.java  AconfigPackageTests.java  AconfigPublicApiCtsTests.java  FlagManagerUnitTests.java
service/ServiceResources/: Android.bp
(+11 files in other folders)
